Wrote truncating function (ref #260), inverting Full Story button (fixes #257).

--- a/content/themes/glp/less/style.less
+++ b/content/themes/glp/less/style.less
@@ -40,6 +40,11 @@
 			.transition(none);
 		}
 	}
+	.btn-inverse {
+		#gradient > .vertical(@white,@grayLighter);
+		color: @grayDark;
+		text-shadow: none;
+	}
 	.modal-header {
 		color: @grayDark;
 	}
